<?xml version="1.0"?>
<package format="2">
  <name>lio_to_mavros</name>
  <version>0.0.0</version>
  <description>Convert fast_lio odometry to mavros vision pose</description>
  <maintainer email="your_email@xxx.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>eigen_conversions</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>eigen_conversions</exec_depend>

  <export>
  </export>
</package>